Closed
Bug 1658113
Opened 5 years ago
Closed 5 years ago
10 bits VP9 videos now playing with wrong colours.
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox-esr78 | --- | unaffected |
| firefox79 | --- | unaffected |
| firefox80 | --- | disabled |
| firefox81 | --- | fixed |
People
(Reporter: jya, Assigned: mikokm)
References
(Regression)
Details
(Keywords: correctness, regression)
Attachments
(1 file)
Try to play https://jyavenard.github.io/htmltests/mediatest/webm/hdr/The%20World%20in%20HDR.webm
Colours are all bad.
Updated•5 years ago
|
status-firefox79:
--- → unaffected
status-firefox80:
--- → unaffected
status-firefox81:
--- → affected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Flags: needinfo?(matt.woodrow)
Keywords: correctness,
regression
Comment 1•5 years ago
|
||
This is a regression from bug 1652550, when we enabled client storage for textures.
Updated•5 years ago
|
Has Regression Range: --- → yes
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
| Assignee | ||
Comment 2•5 years ago
|
||
Looking into this.
| Assignee | ||
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P3
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/8c23d7c73f32
Set the surface format based on YCbCrDescriptor color depth r=jya
Comment 6•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•