Bug 1658113 - Set the surface format based on YCbCrDescriptor color depth r=jya

Differential Revision: https://phabricator.services.mozilla.com/D86600